# test_mo_hinh_trien_khai

./: README.md
client/: docker-compose.yaml
client/bun-client/: Dockerfile  client.js  cluster.js
client/rust-grpc-client/: Cargo.toml  Dockerfile
client/rust-grpc-client/proto/: helloworld.proto
client/rust-grpc-client/src/: client.rs
server/: docker-compose.yaml
server/bun-server/: 100KB.js  10KB.js  1KB.js  1MB.js  app.js  build.sh  cluster.js  init.sh
server/rust-grpc/: 100KB.txt  10KB.txt  1KB.txt  1MB.txt  Cargo.toml  Dockerfile  build.rs  info1.txt
server/rust-grpc/src/: server.rs
